<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">hanikok</string>
    <string name="basic_activity_title">기본</string>
    <string name="title_activity_login">로그인</string>
    <string name="title_activity_user_manager">회원가입 및 로그인</string>
    <string name="title_activity_profile_picture">프로필 사진 추가</string>
    <string name="title_activity_main_drawer">둘러보기</string>
    <string name="title_activity_config">환경 설정</string>
    <string name="title_activity_km_clinic_detail">병원상세 페이지</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_user_profile">프로필</string>
    <string name="title_fragment_login">로그인</string>
    <string name="title_fragment_join">회원가입</string>
    <string name="title_activity_relatives">OO한의원</string>
    <string name="title_activity_allreview">OO한의원, 리뷰</string>
    <string name="title_activity_km_clinic_more_info">OO한의원</string>
    <string name="title_activity_km_clinic_more_doctor">OO한의원</string>
    <string name="title_activity_visited">리뷰남기기</string>
    <string name="title_activity_support">색다른 한의사를 소개합니다</string>
    <string name="title_activity_hanbang_info">한방정보</string>
    <string name="title_activity_hani_kok">HaniKok</string>
    <string name="title_activity_keywords_select">관심 분야 설정</string>
    <string name="action_search">search</string>
    <string name="action_settings">action_setting</string>
    <string-array name="drawer_menu_title_section_array">
        <item>한의콕</item>
        <item>한의원 정보</item>
        <item>한방 정보</item>
    </string-array>
    <string-array name="drawer_menu_title_item_array_honikok">
        <item>둘러보기</item>
        <item>나의 콕!리스트</item>
    </string-array>
    <string-array name="drawer_menu_title_item_array_search">
        <item>한의원 검색하기</item>
        <item>추천 한의원</item>
    </string-array>
    <string-array name="drawer_menu_title_item_array_plus">
        <item>한의콕s 한방정보</item>
        <item>궁금해요 Q<![CDATA[&]]>A</item>
    </string-array>
    <string-array name="drawer_menu_title_array">
        <item>검색하기</item>
        <item>둘러보기</item>
        <item>한방정보</item>
        <item>Itdoc 이용방법</item>
        <item>환경설정</item>
        <item>menu6</item>
        <item>menu7</item>
        <item>menu8</item>
    </string-array>
    <string name="left_drawer_bottom_comment">회원가입을 하면 Itdoc의 좋은 서비스를 더 많이 경험할 수 있습니다.</string>
    <string name="left_drawer_bottom_login_or_register">회원가입 및 로그인</string>
    <string name="intro_img"></string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_intro">HaniKok</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="screenslide_imagename_array">
        <item>introduce_itdoc1</item>
        <item>introduce_itdoc2</item>
        <item>introduce_itdoc3</item>
        <item>introduce_itdoc4</item>
        <item>introduce_itdoc5</item>
    </string-array>
    <string-array name="screenslide_comment_array">
        <item>지인들이 알려주는 좋은 한의원 정보!</item>
        <item>나에게 맞는 한의원을 찾아보세요</item>
        <item>한의원 갈때 더 이상 고민하지 마세요</item>
        <item>이제 잇닥을 사용하시면 됩니다.</item>
    </string-array>
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    <string name="card_back_description"><![CDATA[Lorem ipsum dolor sit]]></string>
    <string name="facebook">페이스북</string>
    <string name="email_join">이메일로 회원가입</string>
    <string name="email_login">이메일로 로그인</string>
    <string name="user_manager_commnet_1">잇닥(it dot)은 무조건적인 광고성 내용은 </string>
    <string name="user_manager_commnet_2">절대 게재하지 않습니다.</string>
    <string name="welcome">회원님 안녕하세요!</string>
    <string name="sir">회원님</string>
    <string name="profile_commnet_1">프로필에 사진을 추가해서</string>
    <string name="profile_commnet_2">회원님에 대해 알려 주세요.</string>
    <string name="profile_profile_image_upload">이미지 업로드</string>
    <string name="profile_profile_image_change">수정하기</string>
    <string name="profile_profile_finish">완료!</string>
    <string name="push">푸쉬 알림</string>
    <string name="alarm">알림 소리</string>
    <string name="helpcomment">도움말</string>
    <string name="helpdesk">고객센터</string>
    <string name="evaluation">잇닥(it doc) 평가하기</string>
    <string name="logout">로그아웃</string>
    <string name="login">로그인</string>
    <string name="button_visited">가봤다.</string>
    <string name="button_call">전화하기</string>
    <string name="recomend_relatives">추천한 이웃들</string>
    <string name="all_review">리뷰 모두 보기</string>
    <string name="more_clinic_info">한의원 설명 더보기</string>
    <string name="more_doctor_info">의료진에 대해서 더보기</string>
    <string name="user_email">이메일주소</string>
    <string name="user_password">비밀번호</string>
    <string name="user_firstname">이름</string>
    <string name="user_lastname">성</string>
    <string name="join_comment_1">회원가입을 함으로써</string>
    <string name="join_comment_2">잇닥(it doc)의 서비스 약관 가입정보 </string>
    <string name="join_comment_3">보호정책 등에 동의하게 됩니다.</string>
    <string name="button_register">회원가입</string>
    <string name="button_login">로그인</string>
    <string name="button_config_logout">로그아웃 되었습니다.</string>
    <string name="activity_user_profile_default_user_name">윤성수</string>
    <string name="activity_user_profile_default_button_follow">+ 팔로우</string>
    <string name="activity_user_profile_default_text_review">리뷰</string>
    <string name="activity_user_profile_default_text_follow">팔로워</string>
    <string name="activity_user_profile_default_text_following">팔로잉</string>
    <string name="activity_user_profile_default_text_message_certification">잇닥에서 인증한 사용자입니다.</string>
    <string name="activity_user_profile_default_text_certification_list">인증 목록</string>
    <string name="textview_activity_user_profile_email_address">이메일 주소</string>
    <string name="textview_activity_user_profile_phone_address">전화번호</string>
    <string name="textview_activity_user_profile_facebook">페이스북</string>
    <string name="button_user_profile_update_my_profile">프로필 수정하기</string>
    <string name="button_user_profile_let_follow">+ 팔로우</string>
    <string name="button_user_profile_followed">팔로우 중</string>
    <string name="button_user_profile_go_certifiction">신원 인증하기</string>
    <string name="button_user_profile_certification_message">본인 인증은 잇닥(itdoc)커뮤니티의 신뢰 구축에 많은 도움이 됩니다.</string>
    <string name="layout_review_message_no_review">작성한 리뷰가 없습니다.</string>
    <string name="title_activity_visited_dialog">VisitedDialogActivity</string>
    <string name="suppoters_main_up_introduce">색다른 한의사를 소개합니다.</string>
    <string name="suppoters_main_up_title">남 북한 통합 한의사?\n김지은 한의사!</string>
    <string name="suppoters_main_down_introduce">착한 한의사를 소개합니다.</string>
    <string name="suppoters_main_down_title">목요일에는 봉사를, 진서아빠\n 이상재한의사 </string>
    <string name="suppoters_up_title">남북한 통합 한의사?\n김지은 한의사!</string>
    <string name="suppoters_up_title_time">2014.08.11</string>
    <string name="suppoters_up_pre">북한에도 한의사가 있다?? 여러분 알고 계셨나요? 한의콕이 만나본 세 번째 한의사!  오늘은 남∙북한 통합 한의사 1호, 김지운 한의사님을 만나고 왔습니다!</string>
    <string name="suppoters_up_main1_title">한의콕 식구분들에게 인사 한마디</string>
    <string name="suppoters_up_main1_sentence">안녕하세요 콕친님들^^ 저는 평양에서 왔고, 남북한 통합 한의사로 알려진 김지운이라고 합니다. 현재는 진 한의원을 운영하고 있습니다.</string>
    <string name="suppoters_up_main2_title">탈북을 결심하게된 계기</string>
    <string name="suppoters_up_main2_sentence">저는 북한 청진 의과대학을 나와 한의사로 9년 간 아픈 사람들을 치료하였습니다. 그러나 영양실조로 죽어가는 어린 아이들을 보면서 진료의 한계를 느껴 탈북을 하게 되었습니다.</string>
    <string name="suppoters_up_main3_title">한국에서 한의사가 되기까지 어려움</string>
    <string name="suppoters_up_main3_sentence">그럼요. 처음부터 한의사를 할 수는 없었습니다. 허드렛일을 하면서 노력했고, 한의대에 편입할 수 있었습니다. 저는 북한에서 제가 헀던 경험을 살려서 남과 북의 한의학을 접목해 좀더 좋은 치료법으로 환자들에게 다가가고 싶어서 노력하고 있습니다.</string>
    <string name="suppoters_up_end_title">다음 편에 계속 됩니다.</string>
    <string name="suppoters_up_end_next_list_1">연관 글 목록</string>
    <string name="suppoters_up_end_next_list_2">남∙북한 통합 한의사? 김지은 한의사! 2편</string>
    <string name="suppoters_up_end_next_list_3">남∙북한 통합 한의사? 김지은 한의사! 3편</string>
    <string name="suppoters_up_end_show_haniwon">김지은 원장님이 계신 한의원은</string>
    <string name="info_fragment_title">우리아이 훌륭하게 키우기 1탄</string>
    <string name="info_fragment_name">화 잘 내는 아이\n어떻게 키워야 할까?</string>
    <string name="textview_hanbang_info_up_main_title">화 잘 내는 아이\n어떻게 키워야 할까?</string>
    <string name="textview_hanbang_info_up_main_time">2014.08.11</string>
    <string name="textview_hanbang_info_up_main1">&#160;&#160;사람이 느끼는 여러 감정 중,분노는 가장 해로운 감정에 속합니다. 왜냐하면 분노는 화산 폭발과도 같기 때문이죠. 화산이 한번 폭발하면 그 주위는 일순간에 초토화! 화를 낼때마다 사람의 몸에서도 이와 비슷한 일이 생기게 되는거죠</string>
    <string name="textview_hanbang_info_up_main2_title">동의보감에서 말하는 분노</string>
    <string name="textview_hanbang_info_up_main2">&#160;&#160;동의보감에서는 분노라는 감정에 대해 특히 당부한 바가 있습니다. “일곱가지 감정이 모두 사람을 상하게 하는데 그중 분노가 가장 심하다.”라고 말이죠.</string>
    <string name="textview_hanbang_info_up_main3_title">분노의 조절이 변화의 원동력</string>
    <string name="textview_hanbang_info_up_main3">&#160;&#160;화를 잘 내는 성격의 아이를 둔 엄마라면 걱정이 안될 수가 없죠. 그렇다면 화를 잘 내는 아이들은 어떻게 다듬어주면서 키워야 할까요?</string>
    <string name="textview_hanbang_info_up_main3_2">&#160;&#160;툭하면 화를 잘 내는 경우에 동의보감에서는 이런 해법을 제시했습니다. “슬픔은 분노를 이긴다.” 여기서 슬픔이란 상대의 아픔을 가엾이 여기고 안타깝게 여기는 슬픔이죠</string>
    <string name="textview_hanbang_info_up_main3_3_0">예를 들어</string>
    <string name="textview_hanbang_info_up_main3_3">&#160;&#160;강아지를 키우는 데 아이가 무척이나 이 강아지를 아끼는 모습이 보인다면 이렇게 말해 볼 수 있어요.</string>
    <string name="textview_hanbang_info_up_main3_4">&#160;&#160;“강아지가 아직 오줌을 제대로 못 가리네. 이럴때 짜증 난다고 강아지에게 막 화를 내면 어떻게 될까? 비록 말은 못하지만 강아지의 마음이 무척 아프겠지?”</string>
    <string name="textview_hanbang_info_up_main3_5">&#160;&#160;이런 대화로 화를 내면 당하는 사람의 마음이 무척 아프다는 것을 느끼게 해 주는 것입니다. 특히 아이가 아끼는 대상을 예로 들어 설명해주면 더 쉽게 이해할거예요.</string>
    <string name="textview_hanbang_info_up_main4_title">동화책을 읽어주는 것도 방법</string>
    <string name="textview_hanbang_info_up_main4">&#160;&#160;막무가내로 떼를 쓰는 아이의 모습이 그려진 동화책이 있다면 읽어주어도 좋습니다. 자신의 모습을 투영시켜 볼 수 있으니까요. 혹은 머리에 쏙쏙 들어가게 하기에 노래 만큼 좋은것이 없다죠. 노래가사를 이용하셔도 좋아요.</string>
    <string name="textview_hanbang_info_up_main4_2">&#160;&#160;어떤 형태이든 아이가 측은 지심의 마음을 쌓아가도록 만들어준다면 좀 더 생산적인 형태로 분노가 다스려질 수 있을 거라는게 포인트입니다.</string>
    <string name="title_activity_my_kok_list">MyKokListActivity</string>
    <string-array name="choose_clinic_main_introduce_array">
        <item>[지루성 탈모]\n모락 한의원\n이성환 한의사님</item>
        <item>[만성 비염]\n오월애 한의원\n조성호 한의사님</item>
    </string-array>
    <string-array name="choose_clinic_contents_0_array">
         <item >[지루성 탈모]\n모락 한의원\n이성환 한의사님</item>
         <item >지루성 탈모의 명의로 모락한의원이 선정되었습니다.</item>
         <item >선정 이유</item>
         <item >1. 치료건수 : 모락 한의원은 지루성 탈모 치료건수가 국내에서 가장 많은 한의원으로 총 13205건의 치료건수를 기록하고 있습니다.</item>
         <item >2. 경력 : 모락 한의원의 이성환 한의사님은 現대한탈모학회의 회장을 역임하고 있으며 탈모분야의 권위자로서 다른 한의사에게 귀감이 되는 한의사님입니다.</item>
         <item >3. 치료법 : 모락 한의원은 체질개선을 통해 완전한 탈모치료를 추구하고 있으며 모낭강화를 통해 근본적인 치료로 효과를 장기간 유지합니다.</item>
         <item >4. 추천 한의사</item>
     </string-array>
</resources>