<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2" >

            <ImageView
                android:id="@+id/imageview_activity_profile_picture_background_top"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#000000" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageview_activity_profile_picture_user_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:src="@drawable/face3" />

        <TextView
            android:id="@+id/textview_activity_profile_picture_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageview_activity_profile_picture_user_profile"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageview_activity_profile_picture_user_profile"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/sir" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/user_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/profile_commnet_1"
                android:textAppearance="?android:attr/textAppearance" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_horizontal"
                android:text="@string/profile_commnet_2"
                android:textAppearance="?android:attr/textAppearance" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical" >

            <Button
                android:id="@+id/button_activity_profile_picture_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_profile_image_upload"
                android:textAppearance="?android:attr/textAppearanceButton" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2" >

                <Button
                    android:id="@+id/button_activity_profile_picture_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_profile_image_change"
                    android:textAppearance="?android:attr/textAppearanceButton" />

                <Button
                    android:id="@+id/button_activity_profile_picture_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_profile_finish"
                    android:textAppearance="?android:attr/textAppearanceButton" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>