<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_marginTop="20dp" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            
            <ImageView 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray"
                 />
            <TextView 
                android:id="@+id/textview_choice_clinic_top_title"
                android:layout_width="0dp" 
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/suppoters_up_title"
                android:textAppearance="?android:attr/textAppearance"
                android:gravity="center"/>
            <TextView 
                android:layout_width="0dp" 
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/suppoters_up_title_time"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="10sp"
				android:layout_gravity="bottom|left"
                android:gravity="center"/>
            
        </LinearLayout>
       <TextView 	style="@style/suppoters_line_text" />
       <LinearLayout 
           android:id="@+id/linearlayout_choice_clinic_contain_clinic"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:gravity="center"
           android:orientation="vertical">
           
           
       </LinearLayout>
       <TextView 	style="@style/suppoters_line_text" />
       
       <TextView 	android:id="@+id/textview_choice_clinic_body_1"
           			style="@style/suppoters_sentence"
                 	android:text="@string/suppoters_up_pre"/>
       
       <TextView 	android:id="@+id/textview_choice_clinic_body_2_title"
           			style="@style/suppoters_sentence_bold"
                 	android:text="@string/suppoters_up_main1_title"/>	
       <TextView 	android:id="@+id/textview_choice_clinic_body_2_1"
           			style="@style/suppoters_sentence"
                 	android:text="@string/suppoters_up_main1_sentence"/>
       <TextView 	android:id="@+id/textview_choice_clinic_body_2_2"
           			style="@style/suppoters_sentence"
                 	android:text="@string/suppoters_up_main1_sentence"/>
       <TextView 	android:id="@+id/textview_choice_clinic_body_2_3"
           			style="@style/suppoters_sentence"
                 	android:text="@string/suppoters_up_main1_sentence"/>
       
       <LinearLayout 
           android:id="@+id/linearlayout_choice_clinic_contain_doctor_img"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:orientation="horizontal">
           
       </LinearLayout>
       
    </LinearLayout>
</ScrollView>
